[package]
name = "learning_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4.9"
rand = "0.8.5"
serial_enumerator = "0.2.12"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
time = "0.3.37"


[profile.dev]
panic = "abort"
